--- a/assignment1a.html
+++ b/assignment1a.html
@@ -1,3 +1,11 @@
+<!--  
+    Name:Prabhjot Kaur
+    File: index.html
+    Date: 17 sep 2023
+    Assignment 1 Part - a 
+-->
+
+
 Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
