started a html tag and chose language as English the set charset and name and content. an appropriate tittle is given and i added hyperlink for css file,
- default doc type tag
- head tag and information about charset updated
- tittle updated
-hyperlink added

--- a/assignment 1 A/assignment1a.html
+++ b/assignment 1 A/assignment1a.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html>
 <!--  
     Name:Prabhjot Kaur
     File: index.html
@@ -5,6 +7,24 @@
     Assignment 1 Part - a 
 -->
 
+<html lang = "en">
+    <head> 
+        <meta charset="UTF-8">
+        <meta name = "author" content = "Dr. Eleanor Gaye">
+        <title>Marking up a letter </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+
+
+
+
+
+
+
+
+
+    </body>
 
 Dr. Eleanor Gaye
 Awesome Science faculty
