i have updated the addresses and align them with appropriate way.
- addresses updated

--- a/assignment 1 A/assignment1a.html
+++ b/assignment 1 A/assignment1a.html
@@ -15,13 +15,31 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
-
-
-
-
-
-
+        <p><address style= "text-align:right;"><strong>Dr. Eleanor Gaye</strong>
+            <br>
+             Awesome Science faculty
+             <br>
+             
+             University of Awesome
+             <br>
+             Bobtown, CA 99999,
+             <br>
+             USA</address></p>
+             <p style = "text-align: right;">
+             <strong>Tel:</strong>123-456-7890
+             <br>
+             <strong>Email:</strong> no_reply@example.com</i>
+             <br>
+             20 January 2016
+         </p>
+        <p style = "text-align: left;"><i> <strong>  Miss Eileen Dover </strong>
+            <br>
+            4321 Cliff Top Edge
+            <br>
+            Dover, CT9 XXX
+            <br>
+            UK</i>
+        </p>
 
 
     </body>
