--- a/assignment1b/assignmentb.html
+++ b/assignment1b/assignmentb.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--  
+    Name:Prabhjot Kaur
+    File: index.html
+    Date: 20 sep 2023
+    Assignment 1 Part - b 
+-->
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
