--- a/assignment1b/assignmentb.html
+++ b/assignment1b/assignmentb.html
@@ -10,6 +10,7 @@
   <head>
     <meta charset="utf-8">
     <title>Birdwatching</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
 
     <!--[if lt IE 9]>
@@ -18,14 +19,23 @@
   </head>
 
   <body>
-
-      <h1>Birdwatching</h1>
-      <img src="dove.png" alt="a simple dove logo">
-
-
-      
-
-
+     <header>
+            <div class = "header">
+            <h1>Birdwatching</h1>
+            <img src="dove.png" alt="a simple dove logo">
+            </div>
+            <nav>
+                <div class="names">
+                    <ul id = "horizontal-list">
+                      <li><a href = ""><span>HOME</span></a></li>
+                      <li><a href="#">GET STARTED</a></li>
+                      <li><a href="#">PHOTOS</a></li>
+                      <li><a href="#">GEAR</a></li>
+                      <li><a href="#">FORUM</a></li>
+                    </ul>
+                  </div>
+            </nav>
+     </header>    
       <h2>Welcome</h2>
 
       <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
