--- a/Assignment2a/index.html
+++ b/Assignment2a/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!-- 
+  Name:Prabhjot Kaur
+    File: index.html
+    Date:  02 oct 2023
+    Assignment 2 Part - a
+-->
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
@@ -101,9 +107,10 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
+          <img src = firefox_logo-only_RGB-120.png alt = fire-fox-logo />
 
     </header>
-
+    
     <main>
       <article>
         <!-- insert iframe from youtube -->
