--- a/Assignment2a/index.html
+++ b/Assignment2a/index.html
@@ -100,6 +100,14 @@
         display: block;
         max-width: 100%;
       }
+      .main {
+        display : flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
+    
     </style>
   </head>
   <body>
@@ -112,15 +120,23 @@
     </header>
     
     <main>
-      <article>
+      <div class = "main">
+       <div class = "video">
+
         <!-- insert iframe from youtube -->
+        <video width="400" controls>
+          <source src="https://youtu.be/ojcNcvb1olg?si=L_c3BC9-18Kam8o7" type="video/mp4">
+        </video></div>
+       <div class = "article">
+        <article>
 
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
 
         <p>Click on the images below to find more information about the cool stuff Mozilla does. <a href="https://www.flickr.com/photos/mathiasappel/21675551065/">Red panda picture</a> by Mathias Appel.</p>
-      </article>
+        </article></div>
+      </div>
 
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
