red panda images added
- after fixing specific errors and mistakes red panda picture succesfully added

--- a/Assignment2a/index.html
+++ b/Assignment2a/index.html
@@ -141,19 +141,20 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="firefox_logo-only_RGB-120.png">
-          <img src = "firefox_logo-only_RGB-120.png" width = "400px" height = "120"/>
+          <img srcset = "firefox_logo-only_RGB-120.png" 
+          width = "400px" height = "120" alt = "firefox-logo"/>
         </a>
         <a href="mozilla-dinosaur-head-120.png">
-          <img src = "mozilla-dinosaur-head-120.png"
-          width = "400px" height = "120"/>
+          <img srcset = "mozilla-dinosaur-head-120.png"
+          width = "400px" height = "120" alt = "dinosaur-head"/>
         </a>
         <a href="firefox-addons-120.jpg">
-          <img src = "firefox-addons-120.jpg"
-          width = "400px" height = "120"/>
+          <img srcset = "firefox-addons-120.jpg"
+          width = "400px" height = "120" alt = "firefox-addons"/>
         </a>
         <a href="mdn.svg">
-          <img src = "mdn.svg"
-          width = "400px" height = "120"/>
+          <img srcset = "mdn.svg"
+          width = "400px" height = "120" alt = "svg image"/>
         </a>
         <div class="clearfix"></div>
       </div>
@@ -161,8 +162,8 @@
       <div class="red-panda">
         <!-- insert picture element -->
         <picture>
-            <source media="(max-width: 600px)" srcset="red-panda-portrait-small.jpg">
-            <img src="red-panda-landscape.jpg" alt="A red panda">
+            <source media = "max-width= 1200px"srcset="red-panda-portrait-small.jpg">
+            <img src="red-panda.jpg" alt="A red panda">
        </picture>
       </div>
 
