--- a/assignment3a/index.html
+++ b/assignment3a/index.html
@@ -1,3 +1,10 @@
+<!--
+    Name : Prabhjot kaur
+    file name : index.html
+    student id : 100920818
+    Description: modifing a biography page
+
+-->
 <!doctype html>
 <html lang="en">
   <head>
