--- a/assignment3a/index.html
+++ b/assignment3a/index.html
@@ -45,11 +45,18 @@
       a:hover {
         text-decoration: none;
       }
+
+      ul.contact{
+        background-color: #eeeeee;
+        border: 5px solid purple;
+        padding: 10px;
+      }
+
     </style>
   </head>
 
-  <body>
-    <h1>Jane Doe</h1>
+  <body class = body>
+    <h1>Prabhjot Kaur</h1>
     <div class="job-title">Web Developer</div>
     <p>
       Far far away, behind the word mountains, far from the countries Vokalia
@@ -65,7 +72,7 @@
     </p>
 
     <h2>Contact information</h2>
-    <ul>
+    <ul class = contact>
       <li>
         Email:
         <a href="mailto:jane@example.com">jane@example.com</a>
