--- a/assignment3a/index.html
+++ b/assignment3a/index.html
@@ -17,7 +17,9 @@
         color: #333;
         font-family: Arial, Helvetica, sans-serif;
         padding: 1em;
-        margin: 0;
+        margin: 10px;
+        border: 2px solid #000;
+
       }
 
       h1 {
@@ -50,6 +52,7 @@
         background-color: #eeeeee;
         border: 5px solid purple;
         padding: 10px;
+        padding-left: 20px;
       }
 
     </style>
@@ -75,7 +78,7 @@
     <ul class = contact>
       <li>
         Email:
-        <a href="mailto:jane@example.com">jane@example.com</a>
+        <a href="prabhmanaise@gmail.com">prabhmanaise@gmail.com</a>
       </li>
       <li>
         Web:
