--- a/assignment3b/index.html
+++ b/assignment3b/index.html
@@ -1,3 +1,9 @@
+<!--
+    Name : Prabhjot kaur
+    file name : index.html
+    student id : 100920818
+    Description: a cool lookin box
+-->
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
