--- a/assignment3b/index.html
+++ b/assignment3b/index.html
@@ -9,10 +9,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Cool box</title>
-    
   </head>
   <body>
-      <div>This is a cool box</div>
+      <div class = box>This is a cool box</div>
   </body>
 </html>
