html comments added

--- a/assignment3c/index.html
+++ b/assignment3c/index.html
@@ -1,3 +1,11 @@
+<!--
+    Name : Prabhjot kaur
+    file name : index.html
+    student id : 100920818
+    Description: type setting a community school page
+
+-->
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
