--- a/assignment3d/index.html
+++ b/assignment3d/index.html
@@ -1,3 +1,13 @@
+<!-- 
+    name : Prabhjot kaur
+    date : 17-10-2023
+    filename : index.html
+    description: fundamental layout comprehension
+-->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
