--- a/assignmnet4a/index.html
+++ b/assignmnet4a/index.html
@@ -1,3 +1,9 @@
+<!--
+ name : Prabhjot kaur
+ filename : index.html
+ date : 20-11-2023
+ A silly story generator
+-->
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
