--- a/assignment4b/index.html
+++ b/assignment4b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Image gallery</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
 <h1>Image gallery example</h1>
-<script src = "main.js"></script>
 
 <div class="full-img">
   <img
@@ -11,3 +21,5 @@
 </div>
 
 <div class="thumb-bar"></div>
+<script src = "main.js"></script>
+</body>
