--- a/assignment4b/index.html
+++ b/assignment4b/index.html
@@ -14,7 +14,7 @@
 <div class="full-img">
   <img
     class="displayed-img"
-    src="pic1.jpg"
+    src="images/pic1.jpg"
     alt="Closeup of a blue human eye" />
   <div class="overlay"></div>
   <button class="dark">Darken</button>
