--- a/assignment4b/index.html
+++ b/assignment4b/index.html
@@ -1,3 +1,12 @@
+<!-- 
+  name : prabhjot kaur
+  file name : index.html
+  date : 22-11-2023
+  image gallery
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
