--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -52,20 +52,21 @@ Date : 12-Dec-2023
         <p>
         Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.
         </p>
-        <table>
+        <table summary =  "various info about types of bears, their coat , their habitat etc.">
+          <caption>Bear information </caption>
           <thead>
             <tr>
-              <td>Bear Type</td>
-              <td>Coat</td>
-              <td>Adult size</td>
-              <td>Habitat</td>
-              <td>Lifespan</td>
-              <td>Diet</td>
+              <th scope = "col">Bear Type</th>
+              <th scope = "col">Coat</th>
+              <th scope = "col">Adult size</th>
+              <th scope = "col">Habitat</th>
+              <th scope = "col">Lifespan</th>
+              <th scope = "col">Diet</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Wild</td>
+              <th scope = "row">Wild</td>
               <td>Brown or black</td>
               <td>1.4 to 2.8 meters</td>
               <td>Woods and forests</td>
@@ -73,7 +74,7 @@ Date : 12-Dec-2023
               <td>Fish, meat, plants</td>
             </tr>
             <tr>
-              <td>Urban</td>
+              <th scope = "row">Urban</th>
               <td>North Face</td>
               <td>18 to 22</td>
               <td>Condos and coffee shops</td>
@@ -83,53 +84,54 @@ Date : 12-Dec-2023
           </tbody>
         </table>
 
-        <font size="5">Habitats and Eating habits</font>
-        <br><br>
+        <h3>Habitats and Eating habits</h3>
+        <p>
         Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
-        <br><br>
-        <img src="media/wild-bear.jpg">
-        <br><br>
+        </p>
+        <img src="wild-bear.jpg" alt = "wildbear">
+        <p>
         Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
-        <br><br>
-        <img src="media/urban-bear.jpg">
-        <br><br>
+        </p>
+        <img src="urban-bear.jpg" alt = "urban bear">
+        <p>
         Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
-        <br><br>
-        <font size="5">Mating rituals</font>
-        <br><br>
+        </p>
+        <h3>Mating rituals</h3>
+        <p>
         Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear.
-        <br><br>
+        </p>
+        <p>
         The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
-        <br><br>
+        </p>
         <audio controls>
-          <source src="media/bear.mp3" type="audio/mp3">
-          <source src="media/bear.ogg" type="audio/ogg">
+          <source src="bear.mp3" type="audio/mp3">
+          <source src="bear.ogg" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
 
         <aside>
 
-          <font size="5">About the author</font>
-        <br><br>
+          <h3>About the author</h3>
+        <p>
           Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.
-        <br><br>
+        </p><p>
           He has never seen a bear, but once read a Daily Mail article about them, and thinks they sound cool.
-
+         </p>
         </aside>
         <section class="comments">
           <div class="show-hide">Show comments</div>
 
           <div class="comment-wrapper">
 
-            <font size="6">Add comment</font>
+            <h2>Add comment</h2>
 
             <form class="comment-form">
               <div class="flex-pair">
-                Your name:
+                <label for = "name"> name: </label>
                 <input type="text" name="name" id="name" placeholder="Enter your name">
               </div>
               <div class="flex-pair">
-                Your comment:
+               <label for = "comment ">comment: </label>
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
               </div>
               <div>
@@ -137,7 +139,7 @@ Date : 12-Dec-2023
               </div>
             </form>
 
-            <font size="6">Comments</font>
+            <h2>Comments</h2>
 
             <ul class="comment-container">
 
@@ -156,7 +158,7 @@ Date : 12-Dec-2023
       </article>
 
       <div class="secondary">
-        <font size="6">Related</font>
+        <h2>Related</h2>
 
         <ul>
           <li><a href="#">The trouble with Bees</a></li>
