--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -3,7 +3,7 @@ filename : index.html
 Date : 12-Dec-2023
  Web assesibity    --> 
 <!DOCTYPE html>
-<html>
+<html lang = "en">
   <head>
     <meta charset="utf-8">
 
